[gd_scene load_steps=4 format=3 uid="uid://cuclpry2ndhpk"]

[ext_resource type="PackedScene" uid="uid://wa1i5183d2r0" path="res://day_manager.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://cy61n3qf3jchw" path="res://game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://3e5vl55s2u0u" path="res://day_transition.tscn" id="3_feb5d"]

[node name="Game" type="Node"]
script = ExtResource("1_e2o6t")

[node name="DayManager" parent="." instance=ExtResource("1_80nbo")]
position = Vector2(557, 15)

[node name="DayHolder" type="Node" parent="."]

[node name="DayTransition" parent="." instance=ExtResource("3_feb5d")]

[connection signal="day_ended" from="DayManager" to="." method="_on_day_manager_day_ended"]
[connection signal="internship_ended" from="DayManager" to="." method="_on_day_manager_internship_ended"]
[connection signal="animation_finished" from="DayTransition" to="." method="_on_day_transition_animation_finished"]
